--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,7 @@
   body {
      font-family: Montserrat, sans-serif;
      color: #ffffff;
+     margin: 0px;
   }
 
   main, footer {
@@ -60,12 +61,35 @@
      background-repeat: no-repeat;
   }
 
+  .header {
+     width: 1322px;
+     margin-left: 59px;
+     margin-right: 59px;
+  }
+
+  .navigation {
+     display: flex;
+     flex-direction: row;
+     padding-left: 136px;
+  }
+
   .logo {
+     padding: 13px 66px 13px 0;
+     margin-top: 23px;
+     margin-bottom: 23px;
      color: inherit;
      font-weight: 700;
      font-size: 24px;
      line-height: 32px;
      text-decoration: none;
+  }
+
+  .navigation-menu {
+     list-style-type: none;
+     display: flex;
+     margin: 0;
+     padding: 0;
+     align-items: center;
   }
 
   .menu-items {
@@ -76,17 +100,42 @@
      text-decoration: none;
   }
 
+  .preview-wrap {
+     display: flex;
+     width: 1050px;
+     margin-left: 195px;
+     margin-right: 195px;
+  }
+
+.preview-text-side {
+     box-sizing: border-box;
+     width: 600px;
+     margin-top: 140.5px;
+     margin-bottom: 140.5px;
+     margin-right: 120px;
+}
+
   .slogan {
      font-weight: 800;
      font-size: 58px;
      line-height: 80px;
      letter-spacing: 0.2px;
+     padding-bottom: 35px;
+     margin: 0px;
   }
 
   .preview-text {
+     width: 376px;
+     height: 60px;
      font-weight: 500;
      font-size: 20px;
      line-height: 30px;
+     margin: 0px;
+  }
+
+  .btn-flex {
+     display: flex;
+     flex-direction: row;
   }
 
 .preview-btn {
@@ -95,6 +144,58 @@
      font-size: 14px;
      line-height: 28px;
      text-decoration: none;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     padding: 10px 36px;
+     margin-top: 35px;
+     background: #FFA62B;
+     border-radius: 37px;
+}
+
+.empty {
+     margin-left: 10px;
+     background: none;
+     border: 1px solid #ffffff;
+}
+
+.preview-form {
+     color: #252B42;
+     width: 350px;
+     background-color: #fff;
+     border-radius: 10px;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     padding: 40px;
+}
+
+.form-name {
+     display: block;
+     font-weight: 700;
+     font-size: 24px;
+     line-height: 32px;
+     text-align: center;
+     letter-spacing: 0.1px;
+}
+
+.btn {
+     color: #FFFFFF;
+     font-weight: 700;
+     font-size: 14px;
+     line-height: 28px;
+     text-align: center;
+     letter-spacing: 0.2px;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     padding: 15px 40px;
+     gap: 10px;
+     width: 248px;
+     height: 58px;
+     background: #FFA62B;
+     border-radius: 5px;
+     border: none;
 }
 
 /* Advantages */
