--- a/styles/style.css
+++ b/styles/style.css
@@ -65,12 +65,14 @@ body {
      margin: 0px;
      padding: 0px;
      box-sizing: border-box;
-     /* max-width: 1440px; */
+     background-color: #252B42;
+     min-width: 1280px;
+     /* TODO: make with @media */
 }
 
-main,
-footer {
-     background-color: #252B42;
+.content-wrapper {
+     max-width: 1440px;
+     margin: 0 auto;
 }
 
 h2 {
