--- a/styles/style.css
+++ b/styles/style.css
@@ -302,8 +302,7 @@ h2[class$="-text-main"] {
      align-items: center;
      gap: 30px;
      width: 100%;
-     margin-left: 195px;
-     margin-right: 195px;
+     margin: 0 auto;
      padding-bottom: 80px;
 
 }
