--- a/styles/style.css
+++ b/styles/style.css
@@ -300,6 +300,7 @@ h2[class$="-text-main"] {
      display: flex;
      flex-direction: row;
      align-items: center;
+     justify-content: center;
      gap: 30px;
      width: 100%;
      margin: 0 auto;
