--- a/styles/style.css
+++ b/styles/style.css
@@ -268,6 +268,7 @@ div[class$="-graph"] {
 
 /* Advantages */
 div[class$="-section"]  {
+     max-width: 1440px;
      padding-top: 80px;
      margin: auto;
 }
@@ -363,9 +364,68 @@ h2[class$="-text-main"] {
      text-decoration: none;
 }
 
+/* Services */
+.services-section {
+     position: relative;
+}
+
+.services-text-main {
+     text-align: center;
+}
+
+.services-bgc {
+     position: absolute;
+     left: 0;
+     top: 409px;
+     width: 100%; 
+     height: 407px;
+     margin: 0;
+     background-color: rgba(22, 105, 122, .5);
+     z-index: -1;
+}
+
+iframe {
+     display: flex;
+     justify-content: center;
+     width: 877px;
+     height: 442px;
+     margin-left: auto;
+     margin-right: auto;  
+}
+
+/* Responses */
+.responses-pic {
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     gap: 30px;
+     width: 100%;
+     margin: 0 auto;
+     padding-bottom: 80px;
+}
+
+
 /* Team */
+.our-team {
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     gap: 30px;
+     width: 100%;
+     margin: 0 auto;
+     padding-bottom: 80px;
+}
+
+.member-photo {
+     margin-bottom: -5px;
+}
+
 .member-info {
      background-color: #fff;
+     text-align: center;
+     padding-top: 30px;
 }
 
 .member-name {
@@ -373,6 +433,7 @@ h2[class$="-text-main"] {
      font-weight: 700;
      font-size: 16px;
      line-height: 24px;
+     margin: 0;
 }
 
 .member-post {
@@ -380,17 +441,58 @@ h2[class$="-text-main"] {
      font-weight: 600;
      font-size: 14px;
      line-height: 24px;
+     margin: 5px 0 5px;
+}
+
+.member-social {
+     list-style-type: none;
+     display: flex;
+     margin: 0 auto;
+     padding-bottom: 30px;
+     align-items: center;
+     justify-content: center;
+     gap: 15px;
 }
 
 /* Order */
 .order {
      background-image: url(/images/order-background.jpg);
      background-repeat: no-repeat;
+     background-size: cover;
+     width: 100%;
 }
+
+.contact {
+     font-weight: 700;
+     font-size: 16px;
+     line-height: 24px;
+     letter-spacing: 0.1px;
+     padding-top: 40px;
+}
+
+.order-form {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     width: 602px;
+     padding-top: 40px;
+}
+
+
 
 /* Consult promo */
 .consult-promo {
+     width: 100%;
      background-color: #fff;
+}
+
+.consult-wrap {
+     width: 73%;
+     display: flex;
+     margin: 0 auto;
+     padding: 40px 0;
+     align-items: center;
+     justify-content: space-between;
 }
 
 .consult {
@@ -399,6 +501,7 @@ h2[class$="-text-main"] {
      line-height: 32px;
      letter-spacing: 0.1px;
      color: #252B42;
+     margin: 0;
 }
 
 .consult-idiom {
@@ -407,6 +510,11 @@ h2[class$="-text-main"] {
      line-height: 20px;
      letter-spacing: 0.2px;
      color: #737373;
+     margin: 0;
+}
+
+.consult-btn {
+     margin: 0;
 }
 
 /* Footer */
@@ -423,7 +531,7 @@ h2[class$="-text-main"] {
      font-size: 14px;
      line-height: 24px;
      letter-spacing: 0.2px;
-     color: #BDBDBD;
+     color: #bdbdbd;
 }
 
 .lorem {
@@ -431,5 +539,5 @@ h2[class$="-text-main"] {
      font-size: 12px;
      line-height: 28px;
      letter-spacing: 0.2px;
-     color: #BDBDBD;
+     color: #bdbdbd;
 }
