--- a/styles/style.css
+++ b/styles/style.css
@@ -273,8 +273,7 @@ div[class$="-graph"] {
 
 /* Advantages */
 div[class$="-section"] {
-     max-width: 1440px;
-     padding-top: 80px;
+     padding: 80px 0;
      margin: auto;
 }
 
@@ -310,7 +309,6 @@ h2[class$="-text-main"] {
      gap: 30px;
      width: 100%;
      margin: 0 auto;
-     padding-bottom: 80px;
 }
 
 .card-item {
@@ -369,23 +367,17 @@ h2[class$="-text-main"] {
 }
 
 /* Services */
-.services-section {
-     position: relative;
-}
-
 .services-text-main {
      text-align: center;
 }
 
-.services-bgc {
-     position: absolute;
-     left: 0;
-     top: 409px;
+.services-section::after {
+     content: "";
+     display: block;
      width: 100%;
-     height: 407px;
-     margin: 0;
+     height: 465px;
      background-color: rgb(22 105 122 / 50%);
-     z-index: -1;
+     margin-top: -385px;
 }
 
 iframe {
@@ -406,7 +398,6 @@ iframe {
      gap: 30px;
      width: 100%;
      margin: 0 auto;
-     padding-bottom: 80px;
 }
 
 /* Team */
@@ -418,7 +409,6 @@ iframe {
      gap: 30px;
      width: 100%;
      margin: 0 auto;
-     padding-bottom: 80px;
 }
 
 .member-photo {
