Fix margin and padding

--- a/styles/style.css
+++ b/styles/style.css
@@ -65,15 +65,17 @@
      /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
+* {
+     margin: 0;
+     padding: 0;
+}
+
 body {
      font-family: Montserrat, sans-serif;
      color: #fff;
-     margin: 0;
-     padding: 0;
      box-sizing: border-box;
      background-color: #252b42;
      min-width: 1280px;
-
      /* TODO: make with @media */
 }
 
