--- a/styles/style.css
+++ b/styles/style.css
@@ -104,8 +104,8 @@ ul {
 .navigation {
      display: flex;
      flex-direction: row;
-     margin: 0 195px;
-     width: 73%;
+     margin: 0 auto;
+     width: 99%;
 }
 
 .logo {
@@ -138,10 +138,11 @@ ul {
 
 .preview-wrap {
      display: flex;
-     width: 73%;
      margin: auto;
      padding-bottom: 50px;
 }
+
+/* width: 73%; */
 
 .preview-text-side {
      box-sizing: border-box;
@@ -276,7 +277,8 @@ div[class$="-graph"] {
 
 /* Advantages */
 div[class$="-section"] {
-     padding: 80px 0;
+     padding-top: 80px;
+     padding-bottom: 80px;
      margin: auto;
 }
 
@@ -370,6 +372,10 @@ h2[class$="-text-main"] {
 }
 
 /* Services */
+div[class^="services-"] {
+     padding-bottom: 0;
+}
+
 .services-text-main {
      text-align: center;
 }
@@ -380,7 +386,7 @@ h2[class$="-text-main"] {
      width: 100%;
      height: 465px;
      background-color: rgb(22 105 122 / 50%);
-     margin-top: -385px;
+     margin-top: -350px;
 }
 
 iframe {
@@ -456,6 +462,7 @@ iframe {
      background-repeat: no-repeat;
      background-size: cover;
      width: 100%;
+     padding: 50px 0;
 }
 
 .contact {
@@ -468,9 +475,45 @@ iframe {
 
 .order-form {
      display: flex;
-     flex-flow: row wrap;
-     width: 602px;
+     flex-flow: column;
+     gap: 20px;
+     width: 57%;
      padding-top: 40px;
+}
+
+.order-form-top {
+     display: flex;
+     gap: 20px;
+     width: 100%;
+}
+
+.order-form-input {
+     margin: 0;
+     width: 33%;
+}
+
+.order-form-bottom {
+     display: flex;
+     gap: 20px;
+}
+
+textarea {
+     font-family: inherit;
+     color: #737373;
+     font-weight: 400;
+     font-size: 14px;
+     line-height: 24px;
+     letter-spacing: 0.2px;
+     width: 73%;
+     height: 140px;
+     padding: 11px 0 11px 21px;
+     border: 1px solid #bdbdbd;
+     border-radius: 5px;
+     resize: none;
+}
+
+.order-btn {
+     margin: 20px 0 40px;
 }
 
 /* Consult promo */
@@ -511,11 +554,50 @@ iframe {
 }
 
 /* Footer */
+.copyright {
+     display: flex;
+     flex-direction: row;
+     margin: 0 auto;
+     width: 73%;
+     padding: 40px 0;
+     border-bottom: 1px solid rgb(54 64 103);
+}
+
+.footer-social {
+     list-style-type: none;
+     display: flex;
+     margin: 0 0 0 auto;
+     gap: 20px;
+     padding: 0 40px;
+     align-items: center;
+}
+
+.footer-info {
+     padding: 70px 0;
+}
+
+.footer-info-items {
+     display: flex;
+     flex-direction: row;
+     list-style-type: none;
+     justify-content: space-between;
+     margin: 0 auto;
+     width: 73%;
+}
+
 .footer-info-title {
      font-weight: 700;
      font-size: 16px;
      line-height: 24px;
      letter-spacing: 0.1px;
+}
+
+.footer-caption {
+     margin: 0 auto 20px 0;
+}
+
+.info-title-more {
+     list-style-type: none;
 }
 
 .title-more-link {
@@ -527,10 +609,45 @@ iframe {
      color: #bdbdbd;
 }
 
+.footer-form {
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+}
+
+.submit-form {
+     font-family: inherit;
+     color: #737373;
+     font-weight: 400;
+     font-size: 14px;
+     line-height: 24px;
+     letter-spacing: 0.2px;
+     height: 36px;
+     width: 321px;
+     border: 1px solid #bdbdbd;
+     border-radius: 5px;
+     margin: 0;
+}
+
+.submit {
+     margin-top: 0;
+     margin-left: -117px;
+     width: 117px;
+     font-weight: 400;
+     font-size: 14px;
+     line-height: 28px;
+}
+
 .lorem {
-     font-weight: 600;
+     font-weight: 400;
      font-size: 12px;
      line-height: 28px;
      letter-spacing: 0.2px;
      color: #bdbdbd;
+}
+
+@media (min-width: 1279px) {
+     .content-wrapper {
+          width: 73%;
+     }
 }
